Minor changes, added picture

--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html>
 <head>
 	<title>Quail Turret</title>
-	<meta name="description" content="Website for the band Progressive Jazz Rock band Quail Turret">
+	<meta name="description" content="Website for the heavy fusion duo Quail Turret">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+	<div id='band-picture'>
+		<img src="path">
+	</div>
+
+	<div>
+		<iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep">QT EP by Quail Turret</a></iframe>
+	</div>
+
+	<div id="band-bio">
+		<p>Bio goes here.</p>
+	</div>
+
 
 </body>
 </html>
