--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Quail Turret</title>
 	<meta name="description" content="Website for the heavy fusion duo Quail Turret">
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
