--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-	<div id='band-picture'>
-		<img src="path">
+	<div>
+		<img src="qt.png" id='band-picture'>
 	</div>
 
 	<div>
