--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+	<h1>Quail TURD</h1>
+
 	<div>
 		<img src="qt.png" id='band-picture'>
 	</div>
@@ -19,9 +21,12 @@
 	</div>
 
 	<div id="band-bio">
-		<p>Bio goes here.</p>
+		<p>Bio goes here?</p>
 	</div>
 
+	<div>
+		<p>Footer/Links go here?</p>
+	</div>
 
 </body>
 </html>
