added mobile and desktop containers

--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
+<div id="mobile">
 	<h1>Quail TURD</h1>
 
 	<div>
 		<img src="qt.png" id='band-picture'>
 	</div>
+
+	<div>
+		<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep">QT EP by Quail Turret</a></iframe>
+	</div>
+
+	<div id="band-bio">
+		<p>Bio goes here?</p>
+	</div>
+
+	<div>
+		<p>Footer/Links go here?</p>
+	</div>
+</div>
+
+<div id="desktop">
+	<h1>Quail TURD</h1>
 
 	<div>
 		<iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep">QT EP by Quail Turret</a></iframe>
@@ -28,5 +46,6 @@
 		<p>Footer/Links go here?</p>
 	</div>
 
+</div>
 </body>
 </html>
