Mobile positioning for headline

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
 <div id="mobile">
-	<h1>Quail TURD</h1>
+	<h1 id="headline">Quail Turret</h1>
 
 	<div>
-		<img src="qt.png" id='band-picture'>
+		<img src="qt.png" id='band-picture' alt="Photo of Quail Turret">
 	</div>
 
 	<div>
