Added bio and things

--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
 	</div>
 
 	<div>
-		<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep">QT EP by Quail Turret</a></iframe>
+		<iframe style="border: 0; width: 95%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep" id="mobile-player">QT EP by Quail Turret</a></iframe>
 	</div>
 
-	<div id="band-bio">
-		<p>Bio goes here?</p>
+	<div id="mobile-bio">
+		<p>	Who is Quail Turret? Imagine the feeling you get before, during, and after your favorite roller coaster: hard hitting chaos that you can't help but love. Quail Turret is band that makes you think with complex musical composition, but leaves you moving your feet and having a wild time.<br><br>
+
+		Hailing from Ithaca College in Ithaca, NY and based in Nashville, TN, pianist Aaron Walters and drummer Gabe Milliman have come together to create a sound all their own. Drawing from Aaron's extensive classical and Jazz training, Gabe's love of hip-hop, punk, and hardcore, and their mutual goofy personalities, Quail Turret's sound is one of intense musicality and, pardon my french, an assload of fun.<br><br>
+		
+		Who does Quail Turret sound like? Their influences include bands like Snarky Puppy, the Black Keys, and Haitus Kaoyote. Check out their EP above to get an even better idea.</p>
 	</div>
 
 	<div>
