added mobile photo, positioning

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<h1 id="headline">Quail Turret</h1>
 
 	<div>
-		<img src="qt.png" id='band-picture' alt="Photo of Quail Turret">
+		<img src="qt-mobile.png" id='band-picture' alt="Photo of Quail Turret">
 	</div>
 
 	<div>
@@ -23,7 +23,7 @@
 	</div>
 
 	<div id="mobile-bio">
-		<p>	Who is Quail Turret? Imagine the feeling you get before, during, and after your favorite roller coaster: hard hitting chaos that you can't help but love. Quail Turret is band that makes you think with complex musical composition, but leaves you moving your feet and having a wild time.<br><br>
+		<p>	Who is Quail Turret? Imagine the feeling you get before, during, and after riding your favorite roller coaster: hard hitting chaos that you can't help but love. Quail Turret is band that makes you think with complex musical composition, but leaves you moving your feet and having a wild time.<br><br>
 
 		Hailing from Ithaca College in Ithaca, NY and based in Nashville, TN, pianist Aaron Walters and drummer Gabe Milliman have come together to create a sound all their own. Drawing from Aaron's extensive classical and Jazz training, Gabe's love of hip-hop, punk, and hardcore, and their mutual goofy personalities, Quail Turret's sound is one of intense musicality and, pardon my french, an assload of fun.<br><br>
 		
