--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 		Who does Quail Turret sound like? Their influences include bands like Snarky Puppy, the Black Keys, and Haitus Kaoyote. Check out their EP above to get an even better idea.</p>
 	</div>
 
-	<div>
-		<p>Footer/Links go here?</p>
-	</div>
+	<footer>
+		<p><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud</a></p>
+
+		<p><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website</a></p>
+	</footer>
 </div>
 
 <div id="desktop">
