added logos, bio to desktop, etc.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 	</div>
 
 	<footer>
-		<p><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud</a></p>
-
-		<p><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website</a></p>
+		<p id="footer1"><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud</a></p>
+		<a href="https://www.facebook.com/Quail-Turret-486288924883602/" target="_blank"><img src="fb.png" id="fb-icon"></a>
+		<a href="https://quailturret.bandcamp.com/releases" target="_blank"><img src="bandcamp.png" id="bandcamp-icon"></a>
+		<p id="footer2"><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website</a></p>
 	</footer>
 </div>
 
@@ -53,15 +54,20 @@
 		<iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep">QT EP by Quail Turret</a></iframe>
 	</div>
 
-	<div id="band-bio">
-		<p>Bio goes here?</p>
+	<div id="desktop-bio">
+		<p>Who is Quail Turret? Imagine the feeling you get before, during, and after riding your favorite roller coaster: hard hitting chaos that you can't help but love. Quail Turret is band that makes you think with complex musical composition, but leaves you moving your feet and having a wild time.<br><br>
+
+		Hailing from Ithaca College in Ithaca, NY and based in Nashville, TN, pianist Aaron Walters and drummer Gabe Milliman have come together to create a sound all their own. Drawing from Aaron's extensive classical and Jazz training, Gabe's love of hip-hop, punk, and hardcore, and their mutual goofy personalities, Quail Turret's sound is one of intense musicality and, pardon my french, an assload of fun.<br><br>
+		
+		Who does Quail Turret sound like? Their influences include bands like Snarky Puppy, the Black Keys, and Haitus Kaoyote. Check out their EP above to get an even better idea.</p>
 	</div>
 
-	
-
-	<div>
-		<p>Footer/Links go here?</p>
-	</div>
+	<footer>
+		<p id="footer1"><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud</a></p>
+		<a href="https://www.facebook.com/Quail-Turret-486288924883602/" target="_blank"><img src="fb.png" id="fb-icon"></a>
+		<a href="https://quailturret.bandcamp.com/releases" target="_blank"><img src="bandcamp.png" id="bandcamp-icon"></a>
+		<p id="footer2"><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website</a></p>
+	</footer>
 
 </div>
 </body>
