changed to square bandcamp logo, switched desktop player

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 	</div>
 
 	<footer>
-		<p id="footer1"><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud</a></p>
+		<p id="footer1"><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud pic</a></p>
 		<a href="https://www.facebook.com/Quail-Turret-486288924883602/" target="_blank"><img src="fb.png" id="fb-icon"></a>
 		<a href="https://quailturret.bandcamp.com/releases" target="_blank"><img src="bandcamp.png" id="bandcamp-icon"></a>
-		<p id="footer2"><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website</a></p>
+		<p id="footer2"><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website pic</a></p>
 	</footer>
 </div>
 
@@ -51,7 +51,7 @@
 	<h1>Quail TURD</h1>
 
 	<div>
-		<iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep">QT EP by Quail Turret</a></iframe>
+		<iframe style="border: 0; width: 40%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep" id="mobile-player">QT EP by Quail Turret</a></iframe>
 	</div>
 
 	<div id="desktop-bio">
@@ -63,10 +63,10 @@
 	</div>
 
 	<footer>
-		<p id="footer1"><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud</a></p>
+		<p id="footer1"><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud pic</a></p>
 		<a href="https://www.facebook.com/Quail-Turret-486288924883602/" target="_blank"><img src="fb.png" id="fb-icon"></a>
 		<a href="https://quailturret.bandcamp.com/releases" target="_blank"><img src="bandcamp.png" id="bandcamp-icon"></a>
-		<p id="footer2"><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website</a></p>
+		<p id="footer2"><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website pic</a></p>
 	</footer>
 
 </div>
