--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="jquery-1.12.0.min.js"></script>
 </head>
 <body>
 
 <div id="mobile">
 	<h1 id="headline">Quail Turret</h1>
 
-	<div>
+	<div >
 		<img src="qt-mobile.png" id='band-picture' alt="Photo of Quail Turret">
 	</div>
 
-	<div>
-		<iframe style="border: 0; width: 95%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep" id="mobile-player">QT EP by Quail Turret</a></iframe>
+	<div id='mobile-player'>
+		<iframe style="border: 0; width: 75%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep">QT EP by Quail Turret</a></iframe>
 	</div>
 
 	<div id="mobile-bio">
@@ -31,27 +32,21 @@
 	</div>
 
 	<footer>
-		<p id="footer1"><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud pic</a></p>
+		<a href="https://soundcloud.com/g_mills"><img src="gabelogo.png"></a>
 		<a href="https://www.facebook.com/Quail-Turret-486288924883602/" target="_blank"><img src="fb.png" id="fb-icon"></a>
 		<a href="https://quailturret.bandcamp.com/releases" target="_blank"><img src="bandcamp.png" id="bandcamp-icon"></a>
-		<p id="footer2"><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website pic</a></p>
+		<a href="http://www.aaronwaltersmusic.com/" target="_blank"><img src="aaronlogo.png"></a>
 	</footer>
 </div>
 
 <div id="desktop">
+<script type ='text/javascript' src='main.js'></script>
+	
 
-	<div>
-		<img id="gabe" src="gabe-left.png">
-	</div>
+	<h1 id='headline-desk'>Quail Turret</h1>
 
-	<div>
-		<img id="aaron" src="aaron-right.png">
-	</div>
-
-	<h1>Quail TURD</h1>
-
-	<div>
-		<iframe style="border: 0; width: 40%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep" id="mobile-player">QT EP by Quail Turret</a></iframe>
+	<div id='desktop-player'>
+		<iframe style="border: 0; width: 39%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=366110249/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://quailturret.bandcamp.com/album/qt-ep">QT EP by Quail Turret</a></iframe>
 	</div>
 
 	<div id="desktop-bio">
@@ -61,12 +56,13 @@
 		
 		Who does Quail Turret sound like? Their influences include bands like Snarky Puppy, the Black Keys, and Haitus Kaoyote. Check out their EP above to get an even better idea.</p>
 	</div>
-
+	
+	
 	<footer>
-		<p id="footer1"><a href="https://soundcloud.com/g_mills">Gabe's Soundcloud pic</a></p>
+		<a href="https://soundcloud.com/g_mills"><img src="gabelogo.png"></a>
 		<a href="https://www.facebook.com/Quail-Turret-486288924883602/" target="_blank"><img src="fb.png" id="fb-icon"></a>
 		<a href="https://quailturret.bandcamp.com/releases" target="_blank"><img src="bandcamp.png" id="bandcamp-icon"></a>
-		<p id="footer2"><a href="http://www.aaronwaltersmusic.com/" target="_blank">Aaron's Website pic</a></p>
+		<a href="http://www.aaronwaltersmusic.com/" target="_blank"><img src="aaronlogo.png"></a>
 	</footer>
 
 </div>
