--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	
 	
 	<footer>
-		<a href="https://soundcloud.com/g_mills"><img src="gabelogo.png"></a>
+		<a href="https://soundcloud.com/g_mills" target="_blank"><img src="gabelogo.png"></a>
 		<a href="https://www.facebook.com/Quail-Turret-486288924883602/" target="_blank"><img src="fb.png" id="fb-icon"></a>
 		<a href="https://quailturret.bandcamp.com/releases" target="_blank"><img src="bandcamp.png" id="bandcamp-icon"></a>
 		<a href="http://www.aaronwaltersmusic.com/" target="_blank"><img src="aaronlogo.png"></a>
