--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
 	</div>
 
 	<div id="desktop-bio">
-		<p>Who is Quail Turret? Imagine the feeling you get before, during, and after riding your favorite roller coaster: hard hitting chaos that you can't help but love. Quail Turret is band that makes you think with complex musical composition, but leaves you moving your feet and having a wild time.<br><br>
+		<p>Quail Turret is an outlandish heavy fusion duo based in Nashville, TN. Hailing from Ithaca, NY and both trained as percussionists, their sound is a result of their uncanny blend of musical personalities.<br><br>
 
-		Hailing from Ithaca College in Ithaca, NY and based in Nashville, TN, pianist Aaron Walters and drummer Gabe Milliman have come together to create a sound all their own. Drawing from Aaron's extensive classical and Jazz training, Gabe's love of hip-hop, punk, and hardcore, and their mutual goofy personalities, Quail Turret's sound is one of intense musicality and, pardon my french, an assload of fun.<br><br>
-		
-		Who does Quail Turret sound like? Their influences include bands like Snarky Puppy, the Black Keys, and Haitus Kaoyote. Check out their EP above to get an even better idea.</p>
+		Bringing his love of fat hip-hop beats and heavy hands from punk and hardcore, drummer Gabe Milliman brings an eclectic energy to the jazz and classical training of pianist Aaron Walters. The resulting baby is heavy-hitting and high-energy while also sensitive, leaving you feeling like you're in the most bizarre amusement park of your life.<br><br>
 	</div>
 	
 	
